@@ -3,7 +3,7 @@ use strict;
 use warnings;
 
 use BioUtils::FastaSeq;
-use Test::More tests => 42;
+use Test::More tests => 58;
 use Test::Exception;
 
 BEGIN { use_ok( 'BioUtils::FastaSeq' ); }
@@ -95,7 +95,7 @@ throws_ok( sub { $fasta_seq->get_id() }, qr/Undefined header/, "get_id() - caugh
     
     my $trimmed_obj;
     
-     # test when no parameter is given
+    # test when no parameter is given
     lives_ok( sub{ $trimmed_obj = $seq_obj->trim_back() },
               "trim_back() - throws" );
     is( $trimmed_obj->get_seq(), "", "trim_back(2) - check trimmed seq" );
@@ -122,6 +122,80 @@ throws_ok( sub { $fasta_seq->get_id() }, qr/Undefined header/, "get_id() - caugh
              "trim_back(2) - lives" );
     is( $trimmed_obj->get_seq(), "CG", "trim_back(2) - check trimmed seq" );
     is( $seq_obj->get_seq(), "ATCGAT", "trim_back(2) - check kept seq" );
+}
+
+# test substr method
+{
+    my $header = "seq1";
+    my $seq = "ATCGATCG";
+    
+    my $seq_obj = BioUtils::FastaSeq->new({
+        header => $header,
+        seq => $seq,
+    });
+    
+    my $substr_obj;
+    
+    # test when no parameters are given
+    throws_ok( sub{ $seq_obj->substr() },
+              'MyX::Generic::Undef::Param',
+              "substr() - throws" );
+    throws_ok( sub{ $seq_obj->substr() },
+              qr/start parameter not defined/,
+              "substr() - throws" );
+    
+    # test when no end parameter is given
+    throws_ok( sub{ $seq_obj->substr(1) },
+              'MyX::Generic::Undef::Param',
+              "substr(1) - throws" );
+    throws_ok( sub{ $seq_obj->substr(1) },
+              qr/end parameter not defined/,
+              "substr(1) - throws" );
+    
+    # test when a non-number is given as start
+    throws_ok( sub{ $seq_obj->substr("a", 1) },
+              'MyX::Generic::Digit::MustBeDigit',
+              "substr(a) - throws" );
+    throws_ok( sub{ $seq_obj->substr("a", 1) },
+              qr/substr start requires digit > 0/,
+              "substr(a) - throws" );
+    
+    # test when a non-number is given as end
+    throws_ok( sub{ $seq_obj->substr(1, "a") },
+              'MyX::Generic::Digit::MustBeDigit',
+              "substr(1,a) - throws" );
+    throws_ok( sub{ $seq_obj->substr(1, "a") },
+              qr/substr end requires digit > 0/,
+              "substr(1,a) - throws" );
+    
+    # test when a negative number is given as the start param
+    throws_ok( sub{ $seq_obj->substr(-1, 2) },
+              'MyX::Generic::Digit::TooSmall',
+              "substr(-1,2) - throws" );
+    throws_ok( sub{ $seq_obj->substr(-1, 2) },
+              qr/start requires digit > 0/,
+              "substr(-1,2) - throws" );
+    
+    # test when a negative number is given as the end param
+    throws_ok( sub{ $seq_obj->substr(1, -2) },
+              'MyX::Generic::Digit::TooSmall',
+              "substr(1,-2) - throws" );
+    throws_ok( sub{ $seq_obj->substr(1, -2) },
+              qr/end requires digit > 0/,
+              "substr(1,-2) - throws" );
+    
+    # test when the end is smaller than the start
+    throws_ok( sub{ $seq_obj->substr(3,2) },
+               'MyX::Generic::Digit::TooBig',
+               "substr(3,2) - throws" );
+    throws_ok( sub{ $seq_obj->substr(3,2) },
+              qr/end is larger than start/,
+              "substr(3,2) - throws" );
+    
+    # test a good run of trim_back
+    lives_ok( sub{ $substr_obj = $seq_obj->substr(2,4) },
+             "substr(2, 4) - lives" );
+    is( $substr_obj->get_seq(), "CGA", "substr(2,4) - check substr seq" );
 }
 
 
